--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -8,7 +8,13 @@ output: github_document
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "README-"
+  fig.path = "README-",
+  dev = "png",
+  dpi = 150,
+  fig.asp = 0.8,
+  fig.width = 5,
+  out.width = "60%",
+  fig.align = "center"
 )
 ```
 
@@ -58,18 +64,20 @@ some features of `mvgam` which specifically rely on certain packages. The most i
 ## A brief introduction to the package
 We can explore the model’s primary functions using a test dataset that
 is available with all `R` installations. We introduce Dynamic Generalized Additive Models and some of the key utility functions provided in `mvgam`. First, load the `lynx` data and plot the series as well as its estimated autocorrelation function
-```{r, fig.width = 5, fig.height = 4, fig.align='center', dpi=150}
+```{r}
 library(mvgam)
 data(lynx)
 lynx_full = data.frame(year = 1821:1934, 
                        population = as.numeric(lynx))
 plot(lynx_full$population, type = 'l', ylab = 'Lynx trappings',
-     xlab = 'Time')
-acf(lynx_full$population, main = '')
+     xlab = 'Time', bty = 'l', lwd = 2)
+box(bty = 'l', lwd  = 2)
+acf(lynx_full$population, main = '', bty = 'l', lwd = 2)
+box(bty = 'l', lwd  = 2)
 ```
 
 Along with serial autocorrelation, there is a clear ~19-year cyclic pattern to the data. Create a `season` term that can be used to model this effect and give a better representation of the data generating process than we would likely get with a linear model
-```{r, fig.width = 5, fig.height = 4, fig.align='center', dpi=150}
+```{r}
 plot(stl(ts(lynx_full$population, frequency = 19), s.window = 'periodic'))
 lynx_full$season <- (lynx_full$year %%19) + 1
 ```
@@ -88,7 +96,7 @@ lynx_test = lynx_full[51:60, ]
 ```
 
 Inspect the series in a bit more detail using `mvgam`'s plotting utility
-```{r, fig.width=6, fig.height=6, fig.align='center', dpi=150, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, fig.width=6, fig.height=6, dpi=150}
 plot_mvgam_series(data = lynx_train)
 ```
 
@@ -104,7 +112,7 @@ lynx_mvgam_prior <- mvgam(data = lynx_train,
 ```
 
 Plot a set of realisations from the prior seasonal smooth function
-```{r, fig.width=5, fig.height=4, fig.align='center', dpi=150}
+```{r}
 plot(lynx_mvgam_prior, type = 'smooths', realisations = TRUE)
 ```
 These functions are showing the marginal contribution of the seasonal smooth function to the linear predictor (on the log scale), and they are clearly allowed to move into ridiculous spaces that we should give very little prior plausibility to:
@@ -125,7 +133,7 @@ lynx_mvgam_prior <- mvgam(data = lynx_train,
 ```
 
 Resulting prior realisations look more reasonable given the range of the observations, and there is clearly enough flexibility to support a wide range of functional shapes.
-```{r, fig.width=5, fig.height=4, fig.align='center', dpi=150}
+```{r}
 plot(lynx_mvgam_prior, type = 'smooths', realisations = TRUE)
 ```
 
@@ -159,27 +167,27 @@ code(lynx_mvgam)
 ```
 
 Perform a series of posterior retrodictive checks to see if the model is able to simulate data for the training period that looks realistic and unbiased. First, examine histograms for posterior retrodictions (`yhat`) and compare to the histogram of the observations (`y`)
-```{r, fig.width = 5, fig.height = 4, fig.align='center', dpi=150}
+```{r}
 ppc(lynx_mvgam, series = 1, type = 'hist')
 ```
 
 Now plot the distribution of predicted means compared to the observed mean
-```{r, fig.width = 5, fig.height = 4, fig.align='center', dpi=150}
+```{r}
 ppc(lynx_mvgam, series = 1, type = 'mean')
 ```
 
 Next examine simulated empirical Cumulative Distribution Functions (CDF) for posterior retrodictions (`yhat`) and compare to the CDF of the observations (`y`)
-```{r, fig.width = 5, fig.height = 4, fig.align='center', dpi=150}
+```{r}
 ppc(lynx_mvgam, series = 1, type = 'cdf')
 ```
 
 Rootograms are becoming [popular graphical tools for checking a discrete model's ability to capture dispersion properties of the response variable](https://arxiv.org/pdf/1605.01311.pdf). Posterior predictive hanging rootograms can be displayed using the `ppc()` function in `mvgam`. In the plot below, we bin the unique observed values into `25` bins to prevent overplotting and help with interpretation. This plot compares the frequencies of observed vs predicted values for each bin, which can help to identify aspects of poor model fit. For example, if the gray bars (representing observed frequencies) tend to stretch below zero, this suggests the model's simulations predict the values in that particular bin less frequently than they are observed in the data. A well-fitting model that can generate realistic simulated data will provide a rootogram in which the lower boundaries of the grey bars are generally near zero
-```{r, fig.width = 5, fig.height = 4, fig.align='center', dpi=150}
+```{r}
 ppc(lynx_mvgam, series = 1, type = 'rootogram', n_bins = 25)
 ```
 
 Finally look for any biases in predictions by examining a Probability Integral Transform (PIT) histogram. If our predictions are not biased one way or another (i.e. not consistently under- or over-predicting), this histogram should look roughly uniform
-```{r, fig.width = 5, fig.height = 4, fig.align='center', dpi=150}
+```{r}
 ppc(lynx_mvgam, series = 1, type = 'pit')
 ```
 
@@ -189,12 +197,12 @@ summary(lynx_mvgam)
 ```
 
 As with any `MCMC` based software, we can inspect traceplots. Here for the `GAM` component smoothing parameters.
-```{r, fig.width = 7, fig.height = 4.1, fig.align='center', dpi=150}
+```{r}
 rstan::stan_trace(lynx_mvgam$model_output, 'rho')
 ```
 
 and for the latent trend component parameters
-```{r, fig.width = 5, fig.height = 4, fig.align='center', dpi=150}
+```{r}
 rstan::stan_trace(lynx_mvgam$model_output, c('ar1', 'ar2', 'ar3', 'sigma'))
 ```
 
@@ -204,7 +212,7 @@ plot(lynx_mvgam, type = 'smooths', residuals = T)
 ```
 
 It is often also useful to compare prior to posterior function realisations to understand how informative the observed data have been for learning these functional shapes
-```{r, fig.width = 7, fig.height = 4.1, fig.align='center', dpi=150}
+```{r}
 layout(matrix(1:2, nrow = 2))
 plot(lynx_mvgam_prior, type = 'smooths', realisations = TRUE)
 plot(lynx_mvgam, type = 'smooths', realisations = TRUE)
@@ -212,39 +220,39 @@ layout(1)
 ```
 
 First derivatives of smooth functions can be plotted to inspect how the slope of the function changes across its length. To plot these we use the more flexible `plot_mvgam_smooth()` function
-```{r, fig.width=5, fig.height=6, fig.align='center', dpi=150}
+```{r}
 plot_mvgam_smooth(lynx_mvgam, 1, 'season', derivatives = T)
 ```
 
 We can also view the mvgam's posterior retrodictions and predictions for the entire series (testing and training)
-```{r, fig.width=5, fig.height=4, fig.align='center', dpi=150}
+```{r}
 plot(lynx_mvgam, type = 'forecast', newdata = lynx_test)
 ```
 
 And the estimated latent trend component, again using the more flexible `plot_mvgam_...()` option to show first derivatives of the estimated trend
-```{r, fig.width=5, fig.height=6, fig.align='center', dpi=150}
+```{r}
 plot_mvgam_trend(lynx_mvgam, newdata = lynx_test, derivatives = T)
 ```
 
 We can also re-do the posterior predictive checks, but this time focusing only on the out of sample period. This will give us better insight into how the model is performing and whether it is able to simulate realistic and unbiased future values
-```{r, fig.width = 5, fig.height = 4, fig.align='center', dpi=150}
+```{r}
 ppc(lynx_mvgam, series = 1, type = 'rootogram', newdata = lynx_test)
 ```
 
-```{r, fig.width = 5, fig.height = 4, fig.align='center', dpi=150}
+```{r}
 ppc(lynx_mvgam, series = 1, type = 'mean', newdata = lynx_test)
 ```
 
-```{r, fig.width = 5, fig.height = 4, fig.align='center',dpi=150}
+```{r}
 ppc(lynx_mvgam, series = 1, type = 'cdf', newdata = lynx_test)
 ```
 
-```{r, fig.width = 5, fig.height = 4, fig.align='center', dpi=150}
+```{r}
 ppc(lynx_mvgam, series = 1, type = 'pit', newdata = lynx_test)
 ```
 
 A key aspect of ecological forecasting is to understand [how different components of a model contribute to forecast uncertainty](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/eap.1589). We can estimate relative contributions to forecast uncertainty for the GAM component and the latent trend component using `mvgam`
-```{r, fig.width=5, fig.height=4, fig.align='center', dpi=150}
+```{r}
 plot_mvgam_uncertainty(lynx_mvgam, newdata = lynx_test, legend_position = 'none')
 text(1, 0.2, cex = 1.5, label="GAM component", 
      pos = 4, col="white", family = 'serif')
@@ -253,7 +261,7 @@ text(1, 0.8, cex = 1.5, label="Trend component",
 ```
 
 Both components contribute to forecast uncertainty, suggesting we would still need some more work to learn about factors driving the dynamics of the system. But we will leave the model as-is for this example. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior empirical quantiles of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR3 model is appropriate for the latent trend
-```{r, fig.width=6, fig.height=6, fig.align='center', dpi=150}
+```{r, fig.width=6, fig.height=6, dpi=150}
 plot(lynx_mvgam, type = 'residuals')
 ```
 
